<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="accounts">Accounts</string>
    <string name="blotter">Blotter</string>
    <string name="currencies">Currencies</string>
    <string name="categories">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="projects">Projects</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="edit_account">Edit Account</string>
    <string name="add_account">Add account</string>
    <string name="title">Title</string>
    <string name="aliases">Aliases (for search, notification matching)</string>
    <string name="aliases_hint">Can have multiple, one per line</string>
    <string name="payee">Payee</string>
    <string name="currency">Currency</string>
    <string name="trading_currency">Trading currency</string>
    <string name="trading_currency_none">(None)</string>
    <string name="add_currency">Add Currency</string>
    <string name="opening_amount">Opening amount</string>
    <string name="limit_amount">Limit amount</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="parent">Parent</string>
    <string name="total">Total:</string>
    <string name="filter">Filter</string>
    <string name="no_filter">No filter</string>
    <string name="transfer">Transfer</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_category_dialog">Delete the category and all sub-categories (if any)?</string>
    <string name="currency_delete_alert">Can\'t delete the currency which is in use.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="include_subcategories">Include sub-categories</string>
    <string name="include_subcategories_summary">Add transactions from sub-categories</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="budget">Budget</string>
    <string name="no_limit">No limit</string>
    <string name="period">Period</string>
    <string name="period_from">Period From</string>
    <string name="period_to">Period To</string>
    <string name="period_recur">Period Recur</string>
    <string name="preferences">Preferences</string>
    <string name="amount_picker">Amount Picker</string>
    <string name="integer_part_title">Number of digits</string>
    <string name="use_hundredth_title">Use hundredths</string>
    <string name="project">Project</string>
    <string name="select_account">Please select account…</string>
    <string name="select_currency">Please select currency…</string>
    <string name="select_category">Please select category…</string>
    <string name="autocomplete_filter_hint">Start typing…</string>
    <string name="select_project">Please select project…</string>
    <string name="warning">Warning</string>
    <string name="no_accounts">You should start with creating an account. Tap the \'+\' at the bottom…</string>
    <string name="accounts_filtered">Filter is active and all accounts has been filtered out.\nTap here to clear filter.</string>
    <string name="no_budgets">No budgets</string>
    <string name="loading">Loading…</string>
    <string name="no_transactions">No transactions</string>
    <string name="no_categories">No categories</string>
    <string name="no_currencies">No currencies</string>
    <string name="no_projects">No projects</string>
    <string name="any_projects">(Any projects)</string>
    <string name="no_recur">No recur</string>
    <string name="no_suggestion">No suggestion</string>
    <string name="account_from">From Account</string>
    <string name="account_to">To Account</string>
    <string name="amount_from">Amount Out</string>
    <string name="amount_to">Amount In</string>
    <string name="rate">Rate</string>
    <string name="no_rate">No rate</string>
    <string name="transaction">Transaction</string>
    <string name="transaction_title">New Transaction</string>
    <string name="transfer_title">New Transfer</string>
    <string name="about">About</string>
    <string name="about_copyright2">All rights reserved</string>
    <string name="menu">Menu</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="no_locations">No locations</string>
    <string name="use_gps">Use GPS</string>
    <string name="use_gps_summary">Use GPS to get current location for transaction</string>
    <string name="use_my_location">Use My Location</string>
    <string name="use_my_location_summary">Use My Location to get current location for a new location</string>
    <string name="select_location">Select location</string>
    <string name="no_fix">Unknown location</string>
    <string name="attribute">Attribute</string>
    <string name="attribute_not_set">[Not set]</string>
    <string name="attributes">Attributes</string>
    <string name="parent_attributes">Parent attributes</string>
    <string name="change_attributes">Change attributes</string>
    <string name="calculator">Calculator</string>
    <string name="no_attributes">No attributes</string>
    <string name="add_attribute">Add attribute</string>
    <string name="new_attribute">New attribute</string>
    <string-array name="attribute_types">
        <item>Text</item>
        <item>Number</item>
        <item>List</item>
        <item>Checkbox</item>
    </string-array>
    <string name="attribute_type">Type</string>
    <string name="attribute_name">Name</string>
    <string name="attribute_values">Values</string>
    <string name="attribute_values_hint">Use ; to separate values</string>
    <string name="attribute_default_value">Default value</string>
    <string name="checkbox_values">Yes/No</string>
    <string name="checkbox_values_yes">Yes</string>
    <string name="checkbox_values_no">No</string>
    <string name="checkbox_values_hint">Yes;No</string>
    <string name="location_name">Location name</string>
    <string name="satellite_on">Satellite On</string>
    <string name="satellite_off">Satellite Off</string>
    <string name="my_location">My location</string>
    <string name="move_marker_to_center">Marker to center</string>
    <string name="move_go_to_marker">Go to marker</string>
    <string name="tap_location">Tap \'My location\' marker to manually adjust location</string>
    <string name="note">Note</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="no_tags">No tags</string>
    <string name="select_tags">Select tags…</string>
    <string name="new_tag">New Tag</string>
    <string name="enter_tag_name">Enter tag name</string>
    <string name="tags_hint">tag1, tag2…</string>
    <string name="tags_filter">Tags containing</string>
    <string name="tags_filter_value">Tag \"%1$s\"</string>
    <string name="tags_more">+ %1$d more</string>
    <string name="note_text_containing">Note text containing</string>
    <string name="note_text_containing_value">Containing \"%1$s\"</string>
    <string name="service_is_not_available">Service is not available, please try again later</string>
    <string name="resolve_address">Resolve address</string>
    <string name="resolving_address">Resolving address…</string>
    <string name="report">Report</string>
    <string name="reports">Reports</string>
    <string name="no_reports">No reports</string>
    <string name="select_report">Please select report…</string>
    <string name="overall">Overall</string>
    <string name="report_by_period">By Period</string>
    <string name="report_by_period_summary">Transactions report by period</string>
    <string name="report_by_category">By Category</string>
    <string name="report_by_category_summary">Transactions report by category</string>
    <string name="report_by_location">By Location</string>
    <string name="report_by_location_summary">Transactions report by location</string>
    <string name="report_by_project">By Project</string>
    <string name="report_by_project_summary">Transactions report by project</string>
    <string name="report_by_tag">By Tag</string>
    <string name="report_by_tag_summary">Transactions report by tag</string>
    <string name="report_by_account_by_period">By Account / Period</string>
    <string name="report_by_account_by_period_summary">Transactions report by account and period</string>
    <string name="report_by_category_by_period">By Category / Period</string>
    <string name="report_by_category_by_period_summary">Transactions report by category and period</string>
    <string name="report_by_location_by_period">By Location / Period</string>
    <string name="report_by_location_by_period_summary">Transactions report by location and period</string>
    <string name="report_by_project_by_period">By Project / Period</string>
    <string name="report_by_project_by_period_summary">Transactions report by project and period</string>
    <string name="report_by_tag_by_period">By Tag / Period</string>
    <string name="template">Template</string>
    <string name="new_from_template">New transaction/transfer from template</string>
    <string name="ai_input_hint">Type a sentence, AI fills the transaction form</string>
    <string name="ai_input_placeholder">e.g. Coffee 120 paid by credit card</string>
    <string name="ai_parse">Parse</string>
    <string name="ai_settings">Settings</string>
    <string name="ai_voice_button_desc">Voice input</string>
    <string name="ai_voice_tap_to_talk">Tap to talk</string>
    <string name="ai_voice_shortcut_short">Say it</string>
    <string name="ai_voice_shortcut_long">Voice bookkeeping</string>
    <string name="ai_log_title">Parse log</string>
    <string name="ai_notification_template">AI notification template</string>
    <string name="ai_keys_hint">Gemini has a free tier that\'s enough for personal use (see Help)</string>
    <string name="ai_provider_gemini">Google AI (Gemini)</string>
    <string name="ai_provider_groq">Groq</string>
    <string name="ai_provider_openai">OpenAI</string>
    <string name="ai_other_section">Other</string>
    <string name="ai_fab_size_title">Voice button size</string>
    <string name="ai_shortcut_behavior_title">After home-screen shortcut</string>
    <string name="ai_notification_template_summary">Pick a notification and let AI build an auto-entry template</string>
    <string name="ai_intro_help">Help</string>
    <string name="ai_log_share">Share</string>
    <string name="ai_log_clear">Clear</string>
    <string name="ai_log_export">To backup folder</string>
    <string name="ai_input_clear_desc">Clear text</string>
    <string name="ai_notification_button">Notifications</string>
    <string name="ai_pin_shortcut">Add voice shortcut to home screen</string>
    <string name="ai_keys_section">API Keys (any one is enough)</string>
    <string name="ai_key_edit">Edit</string>
    <string name="ai_stt_section">Speech recognition</string>
    <string name="ai_stt_combined_title">Recognition &amp; model</string>
    <string name="ai_llm_combined_title">Service &amp; model</string>
    <string name="ai_llm_section">AI parsing</string>
    <string name="ai_rec_retry">Retry</string>
</resources>